feat: add 自駕 (winter driving) section with tips and rental info

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@ body{
     <a href="#transport">交通</a>
     <a href="#hotels">住宿</a>
     <a href="#insurance">保險</a>
+    <a href="#driving">自駕</a>
   </div>
 </nav>
 
@@ -758,6 +759,80 @@ body{
     <div class="info-row"><span class="info-label">保險公司</span><span class="info-value">美商安達 (Chubb)</span></div>
     <div class="info-row"><span class="info-label">保單號碼</span><span class="info-value mono">EWRTWAA0699147</span></div>
     <div class="info-row"><span class="info-label">效期</span><span class="info-value">02/17 21:00 ~ 02/28 21:00</span></div>
+  </div>
+</div>
+
+<div class="section" id="driving">
+  <div class="section-title"><span class="icon">🚗</span> 自駕注意事項</div>
+
+  <div class="info-card" style="margin-bottom:12px">
+    <h4>租車資訊</h4>
+    <div class="info-row"><span class="info-label">車型</span><span class="info-value">KICKS e-POWER 4WD（電四驅）</span></div>
+    <div class="info-row"><span class="info-label">取車</span><span class="info-value">02/25 日產租車 旭川站前店</span></div>
+    <div class="info-row"><span class="info-label">還車</span><span class="info-value">02/27 同一店舖</span></div>
+    <div class="info-row"><span class="info-label">預約號</span><span class="info-value mono">26012301772</span></div>
+    <div class="info-row"><span class="info-label">路線</span><span class="info-value">旭川 → 富良野 → 美瑛 → 旭川</span></div>
+  </div>
+
+  <div class="info-card" style="margin-bottom:12px">
+    <h4>🔑 取車前確認</h4>
+    <ul style="padding-left:1.2rem;line-height:2">
+      <li>確認已換上<strong>雪胎（スタッドレスタイヤ）</strong>——北海道 12–3 月業者一定換</li>
+      <li>確認四驅是否正常啟動（e-POWER 雪地自動切 4WD）</li>
+      <li>確認刮雪板（スノーブラシ）在車內</li>
+      <li>確認油量（雪地請保持油箱半滿以上）</li>
+    </ul>
+  </div>
+
+  <div class="info-card" style="margin-bottom:12px">
+    <h4>❄️ 出發前每次必做</h4>
+    <ul style="padding-left:1.2rem;line-height:2">
+      <li>刮除車頂、前後擋風玻璃、側窗、車燈所有積雪</li>
+      <li>等待前後擋風玻璃完全除霧（視線清楚再上路）</li>
+      <li>確認後視鏡沒有結冰</li>
+      <li>輕輕測試一下煞車感覺（停車場低速試煞）</li>
+    </ul>
+  </div>
+
+  <div class="info-card" style="margin-bottom:12px">
+    <h4>🛣️ 行車注意</h4>
+    <ul style="padding-left:1.2rem;line-height:2">
+      <li><strong>車距加倍</strong>——雪地煞車距離是乾地 3–4 倍</li>
+      <li><strong>絕對不要急踩煞車</strong>——感覺打滑放開油門讓車自然減速</li>
+      <li>橋梁、交叉路口、背陽坡最容易結冰（Mirror Road 路段尤其小心）</li>
+      <li>積雪路面最高 60 km/h，實際視狀況再降速</li>
+      <li>若後輪打滑：<strong>方向盤往打滑方向微轉</strong>（反打會甩出去）</li>
+      <li>夜間溫度更低，黑冰（ブラックアイス）幾乎看不出來</li>
+    </ul>
+  </div>
+
+  <div class="info-card" style="margin-bottom:12px">
+    <h4>⛽ 油量 &amp; 緊急狀況</h4>
+    <ul style="padding-left:1.2rem;line-height:2">
+      <li>加油站在美瑛・富良野鄉間<strong>較稀疏</strong>，看到加油站就補</li>
+      <li>卡在雪溝別自己硬催——打電話給租車公司或道路救援</li>
+      <li>日產租車緊急聯絡：<strong>0120-975-567</strong>（24h）</li>
+      <li>JAF 道路救援：<strong>0570-00-8139</strong></li>
+    </ul>
+  </div>
+
+  <div class="info-card" style="margin-bottom:12px">
+    <h4>🗺️ 路線提示</h4>
+    <ul style="padding-left:1.2rem;line-height:2">
+      <li><strong>旭川 → 富良野（D9）</strong>：接 38 號線南下，約 1.5h，全程可能壓雪</li>
+      <li><strong>富良野 → 美瑛（D10）</strong>：237 號線北上，約 40min；丘陵路段冬天很美但多彎</li>
+      <li><strong>美瑛丘陵小路</strong>：除雪不一定完整，窄路會車要退讓到路邊積雪處</li>
+      <li>Google Maps 雪地導航會建議國道，跟著走即可</li>
+    </ul>
+  </div>
+
+  <div class="info-card">
+    <h4>🅿️ 停車</h4>
+    <ul style="padding-left:1.2rem;line-height:2">
+      <li>停車時注意<strong>不要擋住除雪車通道</strong></li>
+      <li>長時間停車可能被埋雪——準備刮雪板</li>
+      <li>富良野・美瑛觀光景點都有停車場，冬季免費或收費低</li>
+    </ul>
   </div>
 </div>
 
