feat: enhance 自駕 section with insights from Bryan's 18yr Hokkaido winter driving experience

--- a/index.html
+++ b/index.html
@@ -775,22 +775,26 @@ body{
   </div>
 
   <div class="info-card" style="margin-bottom:12px">
-    <h4>🔑 取車前確認</h4>
+    <h4>🔑 取車時要做的事</h4>
     <ul style="padding-left:1.2rem;line-height:2">
       <li>確認已換上<strong>雪胎（スタッドレスタイヤ）</strong>——北海道 12–3 月業者一定換</li>
       <li>確認四驅是否正常啟動（e-POWER 雪地自動切 4WD）</li>
-      <li>確認刮雪板（スノーブラシ）在車內</li>
+      <li><strong>主動跟租車公司要雪刷（スノーブラシ）</strong>——他們常忘記附，不要等</li>
       <li>確認油量（雪地請保持油箱半滿以上）</li>
+      <li>確認緊急聯絡電話在手機裡</li>
     </ul>
   </div>
 
   <div class="info-card" style="margin-bottom:12px">
     <h4>❄️ 出發前每次必做</h4>
     <ul style="padding-left:1.2rem;line-height:2">
-      <li>刮除車頂、前後擋風玻璃、側窗、車燈所有積雪</li>
-      <li>等待前後擋風玻璃完全除霧（視線清楚再上路）</li>
-      <li>確認後視鏡沒有結冰</li>
-      <li>輕輕測試一下煞車感覺（停車場低速試煞）</li>
+      <li>清除<strong>車頂</strong>積雪——煞車時整塊滑下擋住視線，或往後打到後車</li>
+      <li>清除前後擋風玻璃、側窗全部積雪</li>
+      <li>清除<strong>頭燈、尾燈、方向燈</strong>上的雪——否則對方看不到你的燈</li>
+      <li>清除後視鏡結冰</li>
+      <li><strong>清除車內油門/煞車踏板附近的雪</strong>——鞋底帶進來的雪會結冰卡住踏板</li>
+      <li>等前後擋風玻璃完全除霧，視線清楚再上路</li>
+      <li>停車場低速輕試一下煞車感覺</li>
     </ul>
   </div>
 
@@ -800,18 +804,22 @@ body{
       <li><strong>車距加倍</strong>——雪地煞車距離是乾地 3–4 倍</li>
       <li><strong>絕對不要急踩煞車</strong>——感覺打滑放開油門讓車自然減速</li>
       <li>橋梁、交叉路口、背陽坡最容易結冰（Mirror Road 路段尤其小心）</li>
-      <li>積雪路面最高 60 km/h，實際視狀況再降速</li>
+      <li>積雪路面建議 60 km/h 以下，實際視狀況再降</li>
       <li>若後輪打滑：<strong>方向盤往打滑方向微轉</strong>（反打會甩出去）</li>
       <li>夜間溫度更低，黑冰（ブラックアイス）幾乎看不出來</li>
+      <li>長途駕駛後檢查<strong>擋泥板是否積冰</strong>——冰塊堆積可影響輪胎，嚴重時有燒焦味</li>
+      <li><strong>不要100%依賴 GPS</strong>——眼睛要看路牌，GPS 可能不顯示停車標誌</li>
+      <li>Hokkaido 有<strong>測速照相機和暗車（隱形警車）</strong>，別因為本地人開快就跟</li>
     </ul>
   </div>
 
   <div class="info-card" style="margin-bottom:12px">
     <h4>⛽ 油量 &amp; 緊急狀況</h4>
     <ul style="padding-left:1.2rem;line-height:2">
-      <li>加油站在美瑛・富良野鄉間<strong>較稀疏</strong>，看到加油站就補</li>
-      <li>卡在雪溝別自己硬催——打電話給租車公司或道路救援</li>
-      <li>日產租車緊急聯絡：<strong>0120-975-567</strong>（24h）</li>
+      <li><strong>「見到加油站就加油」</strong>——美瑛・富良野鄉間加油站稀疏，且可能不開門</li>
+      <li>陷雪時<strong>不要一直催油前後移動</strong>，會越挖越深——打電話救援</li>
+      <li>荒郊野外等拖車可能要 3–4 小時，保持車內溫暖</li>
+      <li>日產租車緊急：<strong>0120-975-567</strong>（24h）</li>
       <li>JAF 道路救援：<strong>0570-00-8139</strong></li>
     </ul>
   </div>
@@ -822,16 +830,19 @@ body{
       <li><strong>旭川 → 富良野（D9）</strong>：接 38 號線南下，約 1.5h，全程可能壓雪</li>
       <li><strong>富良野 → 美瑛（D10）</strong>：237 號線北上，約 40min；丘陵路段冬天很美但多彎</li>
       <li><strong>美瑛丘陵小路</strong>：除雪不一定完整，窄路會車要退讓到路邊積雪處</li>
-      <li>Google Maps 雪地導航會建議國道，跟著走即可</li>
+      <li>國道為主，Google Maps 雪地導航跟著走即可</li>
+      <li>路上可能有鹿、狐狸衝出——尤其夜間或清晨要注意</li>
     </ul>
   </div>
 
   <div class="info-card">
-    <h4>🅿️ 停車</h4>
+    <h4>🅿️ 停車注意</h4>
     <ul style="padding-left:1.2rem;line-height:2">
-      <li>停車時注意<strong>不要擋住除雪車通道</strong></li>
-      <li>長時間停車可能被埋雪——準備刮雪板</li>
-      <li>富良野・美瑛觀光景點都有停車場，冬季免費或收費低</li>
+      <li><strong>不要把車停在厚雪上</strong>——可能整台車陷進去出不來</li>
+      <li>停好後確認出口路線，避免被其他積雪堵住</li>
+      <li>停車場留意除雪車通道，不要擋到</li>
+      <li>在建築物旁停車注意<strong>屋頂積雪</strong>——氣溫回升時整塊塌下來非常危險</li>
+      <li>富良野・美瑛觀光景點都有停車場，冬季多為免費或低費</li>
     </ul>
   </div>
 </div>
