feat: add advanced Hokkaido winter driving tips (No Handbrake, Wipers, Yabane signs)

--- a/index.html
+++ b/index.html
@@ -803,13 +803,18 @@ body{
     <ul style="padding-left:1.2rem;line-height:2">
       <li><strong>車距加倍</strong>——雪地煞車距離是乾地 3–4 倍</li>
       <li><strong>絕對不要急踩煞車</strong>——感覺打滑放開油門讓車自然減速</li>
+      <li><strong>聽輪胎聲音</strong>：龍龍龍 = 冰面（要放慢），滋滋滋 = 柏油（正常）</li>
+      <li><strong>看懂 Yabane（矢羽根）紅白箭頭</strong>：指向下方標示道路邊緣，沒看這個會開進雪溝</li>
+      <li><strong>找「停止線」看板</strong>：地上標線全被雪蓋住，要看路邊電桿上的停止線牌子</li>
+      <li><strong>下坡+彎道：用引擎煞車</strong>——入彎前先換低檔（S/L）讓車速降下來，入彎後不要踩腳煞車</li>
       <li>橋梁、交叉路口、背陽坡最容易結冰（Mirror Road 路段尤其小心）</li>
-      <li>積雪路面建議 60 km/h 以下，實際視狀況再降</li>
+      <li>積雪路面建議 60 km/h 以下，日落（4-5點）後視線極差要再降速</li>
       <li>若後輪打滑：<strong>方向盤往打滑方向微轉</strong>（反打會甩出去）</li>
-      <li>夜間溫度更低，黑冰（ブラックアイス）幾乎看不出來</li>
-      <li>長途駕駛後檢查<strong>擋泥板是否積冰</strong>——冰塊堆積可影響輪胎，嚴重時有燒焦味</li>
-      <li><strong>不要100%依賴 GPS</strong>——眼睛要看路牌，GPS 可能不顯示停車標誌</li>
-      <li>Hokkaido 有<strong>測速照相機和暗車（隱形警車）</strong>，別因為本地人開快就跟</li>
+      <li>小路出口兩側有雪牆時，車頭先稍微探出去確認沒來車再轉</li>
+      <li>夜間暴風雪視線差：打開<strong>雙黃燈（hazard）</strong>，不開霧燈/遠光（會反光），慢速滑行</li>
+      <li>長途駕駛後用小槌子/雪刷<strong>敲輪框四周積冰</strong>——冰塊堆積會影響輪胎轉動</li>
+      <li>Hokkaido 有<strong>測速照相機和隱形警車</strong>，別因為本地人開快就跟</li>
+      <li>晴天雪地反光刺眼，長途建議帶<strong>偏光太陽眼鏡</strong></li>
     </ul>
   </div>
 
@@ -839,10 +844,13 @@ body{
     <h4>🅿️ 停車注意</h4>
     <ul style="padding-left:1.2rem;line-height:2">
       <li><strong>不要把車停在厚雪上</strong>——可能整台車陷進去出不來</li>
+      <li><strong>🚨 絕對不要拉手煞車！</strong>——鋼索/機構會結冰導致放不下來。完全不用，P 檔即可</li>
+      <li><strong>長時間停車雨刷要立起來</strong>（前後都要）——避免凍在玻璃上導致膠條撕裂</li>
+      <li>停好後設空調為暖氣模式（下次啟動時車內預暖，除雪更容易）</li>
+      <li><strong>不要停在路邊</strong>——暴風雪中視距差，後車反應不及容易追撞</li>
       <li>停好後確認出口路線，避免被其他積雪堵住</li>
       <li>停車場留意除雪車通道，不要擋到</li>
       <li>在建築物旁停車注意<strong>屋頂積雪</strong>——氣溫回升時整塊塌下來非常危險</li>
-      <li>富良野・美瑛觀光景點都有停車場，冬季多為免費或低費</li>
     </ul>
   </div>
 </div>
